Fix alignment in IE11, Edge

--- a/src/scss/japan.scss
+++ b/src/scss/japan.scss
@@ -26,8 +26,8 @@
     white-space: nowrap;
     .row {
       padding: 0 5px;
-      line-height: 34px;
-      min-height: 34px;
+      line-height: 35px;
+      min-height: 35px;
       padding: 3px 0;
       text-align: center;
       &:nth-child(even) {
